--- a/AGDPMS.Shared/Components/Account/Pages/Sale/SaleManageProjectRFQDetail.razor
+++ b/AGDPMS.Shared/Components/Account/Pages/Sale/SaleManageProjectRFQDetail.razor
@@ -61,10 +61,10 @@ else
             </dl>
         </div>
         <div class="card-footer">
-             <button class="btn btn-primary me-2" @onclick="GoToEdit"> <i class="bx bx-edit-alt me-1"></i> Sửa
+             <button class="btn btn-primary me-2" @onclick="GoToEdit"> <i class="bx bx-edit-alt me"></i> Sửa
             </button>
             <button class="btn btn-secondary" @onclick="GoBack">
-                <i class="bx bx-arrow-back me-1"></i> Quay lại
+                <i class="bx bx-arrow-back me"></i> Quay lại
             </button>
         </div>
     </div>
