--- a/AGDPMS.Web/Components/App.razor
+++ b/AGDPMS.Web/Components/App.razor
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="_content/AGDPMS.Shared/app.css" />
     <link rel="stylesheet" href="AGDPMS.Web.styles.css" />
     <link rel="icon" type="image/png" href="_content/AGDPMS.Shared/favicon.png" />
+
+    <link href="vendor/fonts/boxicons/boxicons.css" rel="stylesheet" />
     <HeadOutlet @rendermode="_defaultRenderMode" />
 </head>
 <body>
