--- a/AGDPMS.Web/Components/Routes.razor
+++ b/AGDPMS.Web/Components/Routes.razor
@@ -1,7 +1,7 @@
-﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(AGDPMS.Shared.Components.Layout.MainLayout).Assembly }">
+﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(AGDPMS.Shared.Components.Routes).Assembly }">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="typeof(AGDPMS.Shared.Components.Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <RouteView RouteData="routeData" DefaultLayout="typeof(AGDPMS.Shared.Components.Layout.MainLayout)" />
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
 
     <NotFound>
